dpkg (1.18.5) UNRELEASED; urgency=medium

  * Documentation:
    - Say value instead of option in deb-control(5).
    - Mark debian changelog format in bold in dpkg-parsechangelog(1).
    - Add references to man pages describing file formats.
    - Document missing Install-Size, Built-For-Profiles and Build-Profiles
      fields in man pages.
    - Add new dsc(5), deb-changelog(5) and deb-changes(5) man pages.
    - Remove Debian specific policy references.
    - Remove superfluous SEE ALSO references from dpkg-source(1).
    - Fix --remove and --purge summary formatting in dpkg(1).
    - Move --audit description just after --verify in dpkg(1).
    - Mark Maintainer field as bold in deb-src-control(5).
    - Fix reference to --record-avail instead of inexistent --avail.
    - Add missing quotes in man pages.
    - Document Source field version in deb-control(5).
    - Add new deb822(5) man page.
    - Document and improve C/C++ programs exit codes in man pages.

 -- Guillem Jover <guillem@debian.org>  Fri, 25 Dec 2015 14:20:16 +0100

dpkg (1.18.4) unstable; urgency=medium

  [ Guillem Jover ]
  * Switch dpkg-scansources and dpkg-scanpackages to use File::Find instead
    of find(1), as the former is more portable with more consistent behavior,
    and always canonicalizes the pathnames. Closes: #800649
  * Initialize Config-Version also for packages previously in triggers-pending
    state, otherwise we end up not passing the previously configured version
    to «postinst configure», which might consider this a first install instead
    of an upgrade. Closes: #801156
  * Fix memory leaks in «dpkg --verify» and dpkg infodb format upgrade logic.
  * Merge all update-alternatives action handling into a single if-else-if
    block, to unify the code an allow a future switch into a shared library.
  * Perform any necessary cleanups on normal exit from dpkg-divert --add and
    --remove commands.
  * Make dpkg-architecture warning on non-matching GNU system type compiler