@@ -1,5 +1,7 @@
 dpkg (1.18.5) UNRELEASED; urgency=medium
 
+  * Print correct integer parse error for short-only command-line options.
+    This affects «dpkg-deb -z». Closes: #809174
   * Documentation:
     - Say value instead of option in deb-control(5).
     - Mark debian changelog format in bold in dpkg-parsechangelog(1).
